--- a/src/containers/App/app.scss
+++ b/src/containers/App/app.scss
@@ -86,7 +86,7 @@
 }
 body {
   font-size: 14px;
-  color: #9eaacc;
+  color: #999999;
   line-height: 1.7;
   min-height: 100vh;
   font-family: 'Nunito Sans', sans-serif;
@@ -107,7 +107,7 @@ a {
     position: relative;
     padding: 0.5rem 0 0.5rem 1em;
     &:before {
-      background-color: #3a8ecc;
+      background-color: #294054;
       border-radius: 50%;
       content: '';
       width: 6px;
@@ -119,7 +119,7 @@ a {
     }
     &.active {
       &:before {
-        background-color: #36ce9a;
+        background-color: #294054;
       }
     }
   }
